--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@reduxjs/toolkit": "^2.7.0",
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
@@ -23,7 +24,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "0.19.13"
+    "react-native-web": "0.19.13",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.26.10"
